[MSS-518] Fix yotpo and drop a hint text alignment.

--- a/movado_redesign/cartridges/app_custom_movado_redesign/cartridge/client/default/scss/product/detail.scss
+++ b/movado_redesign/cartridges/app_custom_movado_redesign/cartridge/client/default/scss/product/detail.scss
@@ -1280,7 +1280,7 @@
                 display: none;
             }
 
-            justify-content: space-between;
+            justify-content: center;
         }
 
         .ratings {
@@ -1644,4 +1644,14 @@ body {
     .product-attributes {
         margin-left: rem(74);
     }
+}
+
+.yotpo {
+    .text-m {
+        padding-top: rem(3);
+    }
+}
+
+.drop-hint {
+    padding-top: rem(3);
 }
